--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,18 +8,20 @@
 <body>
     <h1>Sundayyy</h1>
     <div class="login">
-        <div>
-            <label for="username">Username:</label>
-            <input type="text">
-        </div>
-        <div>
-            <label for="password">Password:</label>
-            <input type="password">
-        </div>
-        <div>
-            <button type="submit">Login</button>
-            <a href="/signUp">no account yet? sign up</a>
-        </div>
+        <form action="/login" method="GET">
+            <div>
+                <label for="username">Username:</label>
+                <input type="text">
+            </div>
+            <div>
+                <label for="password">Password:</label>
+                <input type="password">
+            </div>
+            <div>
+                <button type="submit">Login</button>
+                <a href="/signUp">no account yet? sign up</a>
+            </div>
+        </form>
     </div>
 </body>
 </html>
