--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,11 +9,11 @@
     <h1>hello <span data-th-text="${username}"></span>, whatchu wna do tdy?</h1>
     <div>
         <!-- get all logs -->
-        <button action="/all"> all logs</button>
+        <button type="submit" formaction="/all"> all logs</button>
     </div>
     <div>
         <!-- redirect to new log -->
-        <button action="/new">new log</button>
+        <button type="submit" formaction="/new">new log</button>
     </div>
 </body>
 </html>
