--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
         <form th:action="@{/login}" th:method="POST" th:object="${User}">
             <div>
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" placeholder="username" th:field="*{userName}" required>
+                <input type="text" id="username" name="username" placeholder="username" th:field="*{username}" required>
             </div>
             <div>
                 <label for="password">Password:</label>
